# spark-match-08-deep-agent

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  IMPROVEMENTS.md  Makefile  README.md  pyproject.toml
.github/: CODEOWNERS  pull_request_template.md
.github/workflows/: ci.yml
data/careers/: README.md  architecture.md  business_admin.md  civil_engineering.md  cs.md  data_science.md  education.md  graphic_design.md  marketing.md  medicine.md  psychology.md
evals/: __init__.py  dataset.jsonl  dataset.py  judge.py  runner.py
skills/vocational_advisor/: SKILL.md
src/: __init__.py  __main__.py  budget.py
src/agent/: __init__.py  factory.py  middleware.py
src/agent/subagents/: __init__.py  assessment.py  matching.py  planning.py
src/api/: __init__.py  app.py  server.py
src/config/: __init__.py  settings.py
src/memory/: __init__.py  profile_manager.py
src/models/: __init__.py  profile.py
src/observability/: __init__.py  langsmith.py
src/prompts/: __init__.py  assessment.md  coordinator.md  loader.py  matching.md  planning.md  system.py
src/tools/: __init__.py  assessment.py  catalog.py  matching.py  web_search.py
src/tools/assessment/: __init__.py  handler.py  tool.py
src/tools/catalog/: __init__.py  handler.py  loader.py  tool.py
src/tools/matching/: __init__.py  handler.py  tool.py
src/tools/web_search/: __init__.py  handler.py  tool.py
src/utils/: __init__.py  logging.py
tests/: __init__.py  conftest.py  test_budget.py  test_catalog.py  test_langsmith.py  test_prompts.py  test_tools.py
tests/agent/: middleware.py
tests/catalog/: loader.py
tests/evals/: __init__.py  framework.py
tests/models/: profile.py
tests/tools/: assessment.py  catalog.py  matching.py  tool_wrappers.py
tests/utils/: log_setup.py
